Revert "fix flexbox on firefox"
This reverts commit b4986589b99b0da81f74c27f75d312afa341c0c8.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -143,7 +143,6 @@
       margin-left: 30px;
     }
     img[src="img/schedule.png"] {
-        margin-left: -45%;
         width: 100%;
     }
 }
